# sudo-rs

./: Cargo.toml
lib/sudo-cli/src/: lib.rs
lib/sudo-cli/tests/: lib.rs
sudo/: Cargo.toml
sudo/src/: main.rs
sudo/tests/: cli_tests.rs
test-framework/sudo-compliance-tests/src/: lib.rs  nopasswd.rs  sudoers.rs
test-framework/sudo-compliance-tests/src/su/: pam.rs
